# ncds

./: .gitignore  .pre-commit-config.yaml  enable_gpu.sh  pyproject.toml
.github/workflows/: ci.yaml
configs/: ci_train.py  train.py
dataset/lasahandwritingdataset/: Readme.txt  demo_Plot_models.m
src/ncds.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ncds/cli/: train.py
src/ncds/data/: lasa.py
src/ncds/models/: ncds.py  utils.py
src/ncds/training/: train.py
tests/: test_loss.py  test_model.py  test_smoke_training.py
